Create animated model with ThreeJS

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  padding: 0rem;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -26,8 +32,11 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
 
 h1 {
