--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: #89fbe8;
+  /* text-decoration: inherit; */
 }
 a:hover {
   color: #535bf2;
